redactable/tests/ui/sensitive_scalar_non_secret_rejected_slog.stderr
error[E0277]: the trait bound `u64: redactable::__private::PolicyField<Pii>` is not satisfied
 --> tests/ui/sensitive_scalar_non_secret_rejected_slog.rs:3:17
  |
3 | #[derive(Clone, Sensitive, serde::Serialize)]
  |                 ^^^^^^^^^ the trait `redactable::PolicyApplicable` is not implemented for `u64`
  |
  = help: the following other types implement trait `redactable::PolicyApplicable`:
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
            Cell<T>
            Cow<'_, str>
            HashMap<K, V, S>
            HashSet<T, S>
          and $N others
  = note: required for `u64` to implement `redactable::__private::RecursivePolicyField<Pii>`
  = note: required for `u64` to implement `redactable::__private::PolicyField<Pii>`
  = help: see issue #48214
  = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `u64` cannot have a policy applied
 --> tests/ui/sensitive_scalar_non_secret_rejected_slog.rs:3:17
  |
3 | #[derive(Clone, Sensitive, serde::Serialize)]
  |                 ^^^^^^^^^ this type doesn't support redaction policies
  |
  = help: the trait `redactable::PolicyApplicable` is not implemented for `u64`
  = note: policies work on String, Cow<str>, and containers of these types
  = note: for custom string-like types, implement `SensitiveWithPolicy<YourPolicy>`
  = help: the following other types implement trait `redactable::PolicyApplicable`:
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
            Cell<T>
            Cow<'_, str>
            HashMap<K, V, S>
            HashSet<T, S>
          and $N others
  = note: required for `u64` to implement `redactable::__private::RecursivePolicyField<Pii>`
  = note: required for `u64` to implement `redactable::__private::PolicyField<Pii>`
note: required for `Counter` to implement `Redactable`
 --> tests/ui/sensitive_scalar_non_secret_rejected_slog.rs:4:8
  |
3 | #[derive(Clone, Sensitive, serde::Serialize)]
  |                 --------- type parameter would need to implement `Redactable`
4 | struct Counter {
  |        ^^^^^^^
  = help: consider manually implementing `Redactable` to avoid undesired bounds
  = help: see issue #48214
  = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)
