redactable/tests/ui/sensitive_scalar_non_secret_rejected_slog.rs
use redactable::Sensitive;

#[derive(Clone, Sensitive, serde::Serialize)]
struct Counter {
    #[sensitive(redactable::Pii)]
    value: u64,
}

fn main() {}
